--- a/Linea-del-tiempo-personal.html
+++ b/Linea-del-tiempo-personal.html
@@ -6,7 +6,7 @@
         <header>
             <div class="container">
                 <p class="logo">
-                    <a class="one" href="Principal.html">Cartografia social de vecindades</a>
+                    <a class="one" href="index.html">Cartografia social de vecindades</a>
                 </p>
                 <nav>
                     <a href="Linea-del-tiempo-personal.html">Linea del tiempo personal</a>
