--- a/Linea-del-tiempo-personal.html
+++ b/Linea-del-tiempo-personal.html
@@ -24,7 +24,7 @@
 
         <section id="TimeP">
             <div class="container"></div>
-            <iframe class="Link" src="https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1HlIbrFNIxrzjN3pdmzuqvxXzgOHmM_27m5s83Yfbawk&font=Default&lang=en&initial_zoom=2&start_at_slide=27&height=650"></iframe>
+            <iframe class="Link" src="https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1HlIbrFNIxrzjN3pdmzuqvxXzgOHmM_27m5s83Yfbawk&font=Default&lang=en&initial_zoom=2&height=650"></iframe>
         </section>
         
         <footer id="Pie">
