--- a/Lineas-del-tiempo-familiar.html
+++ b/Lineas-del-tiempo-familiar.html
@@ -6,7 +6,7 @@
         <header>
             <div class="container">
                 <p class="logo">
-                    <a class="one" href="Principal.html">Cartografia social de vecindades</a>
+                    <a class="one" href="indexl.html">Cartografia social de vecindades</a>
                 </p>
                 <nav>
                     <a href="Linea-del-tiempo-personal.html">Linea del tiempo personal</a>
@@ -31,7 +31,7 @@
         <section id="TimePa">
             <h2>Familia <span class="color-acento">paterna</span></h2>
             <div class="container"></div>
-            <iframe class="Link" src=""></iframe>
+            <iframe class="Link" src="">"https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1vcjQCXHM2snn6LtmJVwvac-tqwMsECaP&font=Default&lang=en&initial_zoom=2&height=650"</iframe>
         </section>
 
         <footer id="Pie">
