--- a/Lineas-del-tiempo-familiar.html
+++ b/Lineas-del-tiempo-familiar.html
@@ -31,6 +31,7 @@
         <section id="TimePa">
             <h2>Familia <span class="color-acento">paterna</span></h2>
             <div class="container"></div>
+            <iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1vcjQCXHM2snn6LtmJVwvac-tqwMsECaP&font=Default&lang=en&initial_zoom=2&height=650' width='100%' height='650' webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder='0'></iframe>
             <iframe class="Link" src=""></iframe>
         </section>
 
