--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <nav>
                     <a href="Linea-del-tiempo-personal.html">Linea del tiempo personal</a>
                     <a href="Lineas-del-tiempo-familiar.html">Lineas del tiempo familiares</a>
-                    <a href="Nacional">Linea del tiempo nacional</a>
+                    <a href="Linea-del-tiempo-nacional.html">Linea del tiempo nacional</a>
                     <a href="Cartografia.html">Cartografia Social</a>
                 </nav>
             </div>
