--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
                 <div Class="img-container"></div>
                 <div class="text">
                     <h2> ¿Para qué los <span class="color-acento"><br> Lazos de vecindad?</span></h2>
-                    <ol>🔺Cohesión Social
+                    <p1><ol>🔺Cohesión Social
                         🔺Seguridad y Protección
                         🔺Transmisión Cultural
                         🔺Participación y Gobernanza Local
-                    </ol>
+                    </ol></p1>
                 </div>
             </div>
         </Sectión>
