--- a/index.html
+++ b/index.html
@@ -52,10 +52,11 @@
                 <div Class="img-container"></div>
                 <div class="text">
                     <h2> ¿Para qué los <span class="color-acento"><br> Lazos de vecindad?</span></h2>
-                    <p><ol>🔺Cohesión Social
-                        🔺Seguridad y Protección
-                        🔺Transmisión Cultural
-                        🔺Participación y Gobernanza Local
+                    <p><ol>
+                        <li>🔺Cohesión Social </li>
+                        <li>🔺Seguridad y Protección </li>
+                        <li>🔺Transmisión Cultural </li>
+                        <li>🔺Participación y Gobernanza Local </li>
                     </ol></p>
                 </div>
             </div>
