--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
         </section>
 
-        <Sectión id="Que_son">
+        <Sectión id="Que-son">
             <div class="container">
                 <div Class="img-container"></div>
                 <div class="text">
