--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
                 <div class="img-container"></div>
                 <div class="text">
                         <h2>¿Que es una <span class="color-acento"><br>Cartografía social?</span></h2>
-                    <p>La cartografía social es una metodología participativa utilizada para mapear y visualizar dinámicas sociales, identificando 
-                        problemas, recursos y actores clave en una comunidad.</p>
+                    <p>La cartografía social es una metodología participativa utilizada para mapear y visualizar dinámicas sociales, identificando problemas, recursos y actores clave en una comunidad.</p>
                     <p1>López García, O. (2005). Cartografía social: Herramienta para el diagnóstico participativo.</p1>
                 </div>
             </div>
@@ -39,10 +38,7 @@
                 <div Class="img-container"></div>
                 <div class="text">
                     <h2>¿Que son las<span class="color-acento"> Vecindades?</span></h2>
-                    <p>Se refiere a las relaciones sociales y vínculos de apoyo mutuo que se desarrollan entre individuos que viven en proximidad 
-                        geográfica, como en un barrio, una comunidad o una aldea. Estos lazos pueden manifestarse a través de interacciones 
-                        cotidianas, colaboración en actividades comunitarias, intercambio de bienes y servicios, y el establecimiento de redes de apoyo 
-                        emocional y práctico.</p>
+                    <p>Se refiere a las relaciones sociales y vínculos de apoyo mutuo que se desarrollan entre individuos que viven en proximidad geográfica, como en un barrio, una comunidad o una aldea. Estos lazos pueden manifestarse a través de interacciones cotidianas, colaboración en actividades comunitarias, intercambio de bienes y servicios, y el establecimiento de redes de apoyo emocional y práctico.</p>
                 </div>
             </div>
         </Sectión>
@@ -53,10 +49,10 @@
                 <div class="text">
                     <h2> ¿Para qué los <span class="color-acento"><br> Lazos de vecindad?</span></h2>
                     <p><ol>
-                        <li>🔺Cohesión Social </li>
-                        <li>🔺Seguridad y Protección </li>
-                        <li>🔺Transmisión Cultural </li>
-                        <li>🔺Participación y Gobernanza Local </li>
+                        🔺Cohesión Social </li>
+                        🔺Seguridad y Protección </li>
+                        🔺Transmisión Cultural </li>
+                        🔺Participación y Gobernanza Local </li>
                     </ol></p>
                 </div>
             </div>
