--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
                 <div class="text">
                     <h2> ¿Para qué los <span class="color-acento"><br> Lazos de vecindad?</span></h2>
                     <p><ul>
-                        🔺Cohesión Social </li>
-                        🔺Seguridad y Protección </li>
-                        🔺Transmisión Cultural </li>
-                        🔺Participación y Gobernanza Local </li>
+                        <li>🔺Cohesión Social </li>
+                         <li>🔺Seguridad y Protección </li>
+                         <li>🔺Transmisión Cultural </li>
+                         <li>🔺Participación y Gobernanza Local </li>
                     </ul></p>
                 </div>
             </div>
