--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div Class="img-container"></div>
                 <div class="text">
                     <h2>¿Que son las<span class="color-acento"> Vecindades?</span></h2>
-                    <p>Se refiere a las relaciones sociales y vínculos de apoyo mutuo que se desarrollan entre individuos que viven en proximidad geográfica, como en un barrio, una comunidad o una aldea. Estos lazos pueden manifestarse a través de interacciones cotidianas, colaboración en actividades comunitarias, intercambio de bienes y servicios, y el establecimiento de redes de apoyo emocional y práctico.</p>
+                    <h4>Se refiere a las relaciones sociales y vínculos de apoyo mutuo que se desarrollan entre individuos que viven en proximidad geográfica, como en un barrio, una comunidad o una aldea. Estos lazos pueden manifestarse a través de interacciones cotidianas, colaboración en actividades comunitarias, intercambio de bienes y servicios, y el establecimiento de redes de apoyo emocional y práctico.</h4>
                 </div>
             </div>
         </Sectión>
