--- a/Cartografia.html
+++ b/Cartografia.html
@@ -24,7 +24,11 @@
 
         <section id="Mapa">
             <div class="container"></div>
-            <iframe class="Link" src="https://view.genially.com/67b01f0d667095903f9ff697/interactive-content-cartografia-social-de-vecindades"></iframe>
+            <div style="width: 100%;">
+                <div style="position: relative; padding-bottom: 56.25%; padding-top: 0; height: 0;">
+                <iframe title="Cartografia social de vecindades" frameborder="0" width="1200" height="675" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" src="https://view.genially.com/67b01f0d667095903f9ff697" type="text/html" allowscriptaccess="always" allowfullscreen="true" scrolling="yes" allownetworking="all"></iframe> 
+                </div> 
+            </div>
         </section>
 
         <footer id="Pie">
